--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Hire Alvaro to create your web or mobile app. Web Developer and Content Creator. Specialized in creating unique applications." />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <title>Alvaro Portfolio - Developer and Web programer with +5 years of experience</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <link rel="stylesheet" href="/index.css" />
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
